# gui

./: CMakeLists.txt
include/gui/: gui.h
include/gui/core/: gui_error.h  gui_info.h
include/gui/window/: gui_window.h
include/gui/window/platform/: linux_window.h  window_impl.h  windows_window.h
src/core/: gui_error.cpp  gui_info.cpp
src/window/: gui_window.cpp
src/window/platform/: linux_window.cpp  windows_window.cpp
